Add app_links plugin and update project configuration
- Introduced app_links plugin with support for various platforms.
- Updated .flutter-plugins and .flutter-plugins-dependencies files to include new plugin.
- Removed GoogleService-Info.plist for security reasons.
- Updated Podfile and Podfile.lock to reflect new dependencies and configurations.
- Changed app display name from "Atomicoat 5th Version" to "Experiment Planner" in Info.plist.
- Updated project metadata and Xcode project settings for better organization and compatibility.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Atomicoat 5th Version</string>
+	<string>Experiment Planner</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>atomicoat_5th_version</string>
+	<string>experiment_planner</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
