Update dependencies and add flutter_launcher_icons configuration
- Updated several package versions in pubspec.lock, including cloud_firestore, firebase_auth, and firebase_core, to their latest versions for improved functionality and security.
- Added flutter_launcher_icons as a dependency in pubspec.yaml to facilitate custom app icon configuration.
- Configured flutter_icons settings to use a new app icon located at assets/atomicoat_app_icon.png.
- Included the new app icon asset in the project structure.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   logger: ^2.0.2+1
 
   equatable: any
+  flutter_launcher_icons: ^0.14.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -76,3 +77,10 @@ flutter:
   assets:
     - assets/ald_system_diagram.png
     - assets/initial_components.json
+    - assets/atomicoat_app_icon.png
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/atomicoat_app_icon.png"
