--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 }
 
 android {
-    namespace = "com.example.atomicoat_5th_version"
+    namespace = "com.albaraa.atomicoat"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -22,8 +22,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.atomicoat_5th_version"
+        applicationId = "com.albaraa.atomicoat"
         // Explicitly set minSdkVersion to 23 to meet Firebase Auth requirements
         minSdkVersion 23
         targetSdk = flutter.targetSdkVersion
