Rename project from 'experiment_planner' to 'atomicoat' and update related configurations. Adjusted app description, AndroidManifest label, and route imports to reflect the new project name. Additionally, streamlined the AppIcon asset catalog by consolidating image entries and adding new icon sizes for better compatibility.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: experiment_planner
-description: An app for planning and scheduling experiments.
+name: atomicoat
+description: A coating thickness measurement and analysis app.
 
 publish_to: 'none'
 
