--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A coating thickness measurement and analysis app.
 
 publish_to: 'none'
 
-version: 1.0.0+2
+version: 2.0.0+3
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -38,34 +38,26 @@ dependencies:
   animations: ^2.0.3
   flutter_animate: ^4.1.1+1
   audioplayers: ^6.1.0
-  firebase_core: ^3.5.0
-  firebase_auth: ^5.3.0
-  cloud_firestore: ^5.4.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   build_runner: ^2.3.3
   hive_generator: ^2.0.0
   crypto: any
-  firebase_admin: ^0.3.0
-  firebase_dart: ^1.0.11
   http: ^1.2.2
-  firebase_auth_rest: ^2.0.6
   flutter_bloc: ^8.1.6
   mockito: ^5.4.4
-  fake_cloud_firestore: ^3.1.0
-  firebase_auth_mocks: ^0.14.1
   test: ^1.24.9
   logger: ^2.0.2+1
-
+  supabase_flutter: ^2.3.4
   equatable: any
   flutter_launcher_icons: ^0.14.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
-  firebase_core_platform_interface: any
   plugin_platform_interface: any
+
 flutter:
   uses-material-design: true
   fonts:
