Update dependencies: Add shimmer package version 3.0.0
- Added shimmer package as a direct dependency in pubspec.yaml.
- Updated pubspec.lock to include shimmer version 3.0.0 with its corresponding metadata.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   supabase_flutter: ^2.3.4
   equatable: any
   flutter_launcher_icons: ^0.14.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
